# CustomProgLanguage

./: README.md
examples/: blablabla.is
lib/: CMakeLists.txt
lib/lexer/: CMakeLists.txt  lexer.cpp  lexer.h
lib/lexer/errors/: lex_errors.cpp  lex_errors.h
lib/lexer/rules/: rules.h
lib/lexer/token/: token.cpp  token.h
lib/runtime/: CMakeLists.txt
lib/runtime/enviroment/: CMakeLists.txt  enviroment.cpp  enviroment.h
lib/runtime/enviroment/errors/: env_errors.cpp  env_errors.h
lib/runtime/evaluator/: CMakeLists.txt  evaluator.cpp  evaluator.h
lib/runtime/evaluator/errors/: ev_errors.cpp  ev_errors.h
lib/runtime/evaluator/operations/: handlers.cpp  handlers.h  register.cpp  register.h
lib/runtime/function/: CMakeLists.txt  function.cpp  function.h
lib/runtime/function/errors/: func_errors.cpp  func_errors.h
lib/runtime/interpreter/: CMakeLists.txt  interpreter.cpp  interpreter.h
lib/runtime/interpreter/builtins/: builtins.cpp  builtins.h
lib/runtime/interpreter/builtins/errors/: bltns_errors.cpp  bltns_errors.h
lib/runtime/interpreter/errors/: intrptr_errors.cpp  intrptr_errors.h
lib/runtime/interpreter/statements/: statements.cpp  statements.h
lib/runtime/value/: CMakeLists.txt  value.cpp  value.h
lib/runtime/value/errors/: val_errors.cpp  val_errors.h
lib/semantic/: CMakeLists.txt  semantic.cpp  semantic.h
lib/semantic/errors/: semantic_errors.h
lib/semantic/symbols/: symb_table.cpp  symb_table.h
lib/semantic/type_system/: type_system.cpp  type_system.h
lib/syntax/: CMakeLists.txt  syntax.cpp  syntax.h
lib/syntax/errors/: synt_errors.cpp  synt_errors.h
lib/vls_and_sttmnts/: CMakeLists.txt  vls_and_sttmnts.cpp  vls_and_sttmnts.h
tests/: CMakeLists.txt  builtns_tests.cpp  func_tests.cpp  function_test.cpp  illegal_ops_test.cpp  integration_tests.cpp  lexer_tests.cpp  loop_and_branch_test.cpp  operations_tests.cpp  runtime_tests.cpp  semantic_tests.cpp  syntax_tests.cpp  types_test.cpp
